--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.7"
+    "@astrojs/react": "^4.2.0",
+    "@tailwindcss/vite": "^4.0.5",
+    "astro": "^5.1.7",
+    "framer-motion": "^12.4.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.5",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.5"
   }
 }
