--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.0",
+    "@astrojs/tailwind": "^6.0.0",
     "@tailwindcss/vite": "^4.0.5",
     "astro": "^5.1.7",
-    "framer-motion": "^12.4.1"
+    "framer-motion": "^12.4.7",
+    "lightningcss": "^1.29.1",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.5",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.5"
+    "postcss": "^8.5.1"
   }
 }
